# triqs

test/mpi/: CMakeLists.txt
