link_libraries(gtest mpi)
add_definitions(-std=c++17 -fopenmp)

file(GLOB test_files "mpi_*.cpp")
foreach(file ${test_files})
 get_filename_component(TestName ${file} NAME_WE)
 add_executable(${TestName} ${file})
 target_link_libraries(${TestName} -fopenmp)
 add_test(${TestName} ${TestName})
 add_test(NAME ${TestName}_np1 COMMAND mpirun -np 1 $<TARGET_FILE:${TestName}>)
 add_test(NAME ${TestName}_np2 COMMAND mpirun -np 2 $<TARGET_FILE:${TestName}>)
 add_test(NAME ${TestName}_np3 COMMAND mpirun -np 3 $<TARGET_FILE:${TestName}>)
 add_test(NAME ${TestName}_np4 COMMAND mpirun -np 4 $<TARGET_FILE:${TestName}>)
endforeach()

add_executable(comm_split comm_split.cpp)
add_test(NAME comm_split COMMAND mpirun -np 4 $<TARGET_FILE:comm_split>)

add_executable(vector_zero_length vector_zero_length.cpp)
add_test(vector_zero_length vector_zero_length)
